# ivyhost

./: Cargo.toml  config.toml  default.nix  shell.nix
migrations/: V1__initial.sql
src/: analytics.rs  analytics_routes.rs  config.rs  lib.rs  main.rs  pull.rs
src/db/: conn.rs  mod.rs  pg.rs
src/templates/: path.html
templates/: index.html  index.html.tera  path.html
