[package]
name = "ivyhost"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.5"
actix-files = "0.6.6"
actix-web = "4.9.0"

tokio-postgres = "0.7.11"
tokio-pg-mapper = "0.2.0"
tokio-pg-mapper-derive = "0.2.0"
refinery = { version = "0.8.14", features = ["tokio-postgres"]}
config = "0.14.0"
serde = "1.0.210"
deadpool-postgres = "0.14.0"
git2 = "0.19.0"
# git2 = "0.18.1"